--- a/curso_2/aula_1.html
+++ b/curso_2/aula_1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>
-        FUNÇÕES SIMPLES, COM PARÂMETRO, FUNÇÃO VARIAVEL NOMEADA E SEM NOME
+        funções simples, com parâmetro, função variavel nomeada e sem nome
     </h1>
     <script>
 
