--- a/curso_2/aula_7.html
+++ b/curso_2/aula_7.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Objetos</h1>
     <script>
         // objeto simples
         let objSimples = {nome: "objeto simples"};
