criando elemento dinamicamente

--- a/curso_3/aula_2.html
+++ b/curso_3/aula_2.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+    <h1>Objeto document</h1>
+
     <p id='titulo' class='titulo'>Olá Programadores</p>
     <input type="text" name="nome" id="nome">
 
